--- a/src/index.css
+++ b/src/index.css
@@ -152,3 +152,11 @@
         @apply text-xs md:text-sm font-normal  leading-relaxed;
     }
 }
+.hide-scrollbar {
+  scrollbar-width: none; 
+  -ms-overflow-style: none; 
+}
+
+.hide-scrollbar::-webkit-scrollbar {
+  display: none;
+}
