feat : frontend updated wih payment history , redirect page, e.t.c

--- a/src/index.css
+++ b/src/index.css
@@ -160,3 +160,9 @@
 .hide-scrollbar::-webkit-scrollbar {
   display: none;
 }
+iframe {
+  width: 100% !important;
+  min-width: 100% !important;
+  height: 100% !important;
+}
+
