--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,10 @@
   -ms-overflow-style: none;  /* IE and Edge */
   scrollbar-width: none;     /* Firefox */
 }
+.prose p {
+  margin-top: 0;
+  margin-bottom: 0.5rem; /* adjust spacing */
+}
 
 .hide-scrollbar {
   -ms-overflow-style: none; /* IE and Edge */
